--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -24,7 +24,7 @@
                 </div>
               </label>
               <label class="item item-input">
-                <input type="text" placeholder="Teléfono" ng-model="volunteers[0].phone" name="u1Phone" required>
+                <input type="tel" placeholder="Teléfono" ng-model="volunteers[0].phone" name="u1Phone" required>
                 <div ng-show="volunteerForm.$submitted || volunteerForm.u1Phone.$touched">
                   <i class="icon ion-ios-close invalid" ng-show="volunteerForm.u1Phone.$error.required"></i>
                   <i class="icon ion-ios-checkmark valid" ng-hide="volunteerForm.u1Phone.$error.required"></i>
@@ -50,7 +50,7 @@
                 <input type="text" placeholder="DPI" ng-model="volunteers[1].dpi" name="u2Dpi">
               </label>
               <label class="item item-input">
-                <input type="text" placeholder="Teléfono" ng-model="volunteers[1].phone" name="u2Phone" >
+                <input type="tel" placeholder="Teléfono" ng-model="volunteers[1].phone" name="u2Phone" >
               </label>
               <label class="item item-input">
                 <input type="email" placeholder="Correo Electrónico" ng-model="volunteers[1].email" name="u2Mail" >
