--- a/www/templates/survey-stadistics.html
+++ b/www/templates/survey-stadistics.html
@@ -1,5 +1,8 @@
-<ion-view view-title="stadistics">
-  <ion-content ng-controller="stadisticsController">
+<ion-view view-title="stadistics" ng-controller="stadisticsController">
+<ion-header-bar align-title="center" class="bar-positive">  
+  <h1 class="title">{{survey.name}}</h1>  
+</ion-header-bar>
+  <ion-content>  
   	<div class="list card">
 	  <div class="item item-avatar">
 	    <img src="img/techo_logo.png">
@@ -12,8 +15,6 @@
 	      	(otros datos relevantes para comenzar una nueva encuesta de tipo: {{survey.type}}) 
 	      	<br/>
 	      	<h3>Token: {{token}}</h3>
-
-
 	    </p>	    
 	  </div>	  	  
 	  <div class="item tabs tabs-secondary tabs-icon-top">
