--- a/www/templates/init.html
+++ b/www/templates/init.html
@@ -5,10 +5,7 @@
         <p align="center"> Alguna descripcion relevante</p>
         </div>
         <div class="item item-body" ng-click="sync()">
-        <center><a >
-	    	<i class="icon ion-ios-loop-strong bigger-4"></i><br/>
-	      Sincronizar Encuestas
-	    </a></center>       
+        <center><i class="icon ion-ios-loop-strong bigger-4"></i><br/>Sincronizar Encuestas</center>       
         </div>
       </div>        
   </ion-content>
