Sections list added, back buttom added.

--- a/www/templates/sections-list.html
+++ b/www/templates/sections-list.html
@@ -2,15 +2,22 @@
 <ion-header-bar align-title="center" class="bar-positive">  
   <h1 class="title">Secciones</h1>  
 </ion-header-bar>
-  <ion-content >
-  	<ion-list>
-  		<ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="section in sections | filter: search_section" type="item-text-wrap" ng-href="#/surveys/{{survey.sid}}/{{section.gid}}">
-  			<img ng-src="img/techo_logo.png">
-  			<h2>{{section.group_name}}</h2>
-  			<p>{{section.gid}}</p>
-        <i class="icon ion-ios-arrow-right icon-accessory"></i>  			
-  		</ion-item>
-  	</ion-list>
+  <ion-content>
+  <div ng-repeat="section in sections | filter: search_section">
+    <div class="list card">
+      <div class="item item-icon-left">
+      <i class="icon ion-ios-book-outline"></i>
+        <h2>{{section.group_name}}</h2>
+      </div>    
+      <div class="item item-body">
+        <p>{{section.description}}</p>
+      </div>
+     <a class="item item-icon-right positive" ng-click="initQuestions({{section}})">
+        <i class="icon ion-ios-arrow-forward"></i>
+        Comenzar Sección
+      </a>
+    </div>
+  </div>  	
   </ion-content>
 <div class="bar bar-footer item-input-inset">
   <label class="item-input-wrapper">
