--- a/www/templates/survey-volunteer-data.html
+++ b/www/templates/survey-volunteer-data.html
@@ -1,6 +1,6 @@
 <ion-view view-title="stadistics" ng-controller="volunteerDataController">
 <ion-header-bar align-title="center" class="bar-positive">  
-  <h1 class="title">Encuesta</h1>  
+  <h1 class="title">Datos del Voluntario</h1>  
 </ion-header-bar>
   <ion-content>  
   	<div class="list card">
