--- a/www/templates/survey-question.html
+++ b/www/templates/survey-question.html
@@ -1,5 +1,8 @@
 <ion-view view-title="question" ng-controller="questionController">
 <ion-header-bar align-title="center" class="bar-positive">  
+	<div class="buttons">
+    	<button class="button icon-left ion-ios-arrow-back button-clear " ng-click="goBack()">secciones</button>
+  	</div>
   <h1 class="title">{{section.group_name}}</h1>  
 </ion-header-bar>
   <ion-content>  
