--- a/www/templates/surveys-list.html
+++ b/www/templates/surveys-list.html
@@ -1,5 +1,8 @@
 <ion-view view-title="surveys" ng-controller="surveyController">
 <ion-header-bar align-title="center" class="bar-positive">  
+  <div class="buttons">
+    <button class="button icon-left ion-ios-arrow-back button-clear " ng-click="goBack()">volver</button>
+  </div>
   <h1 class="title">Encuestas</h1>  
 </ion-header-bar>
   <ion-content >
@@ -9,8 +12,10 @@
   			<h2>Encuesta</h2>
   			<p>{{survey.sid}}</p>
         <i class="icon ion-ios-arrow-right icon-accessory"></i>  			
-  		</ion-item>
+        <ion-option-button class="button-calm ion-ios-cloud-upload bigger-2" ng-click="sendData({{survey.sid}})"></ion-option-button>
+  		</ion-item>      
   	</ion-list>
+
   </ion-content>
 <div class="bar bar-footer item-input-inset">
   <label class="item-input-wrapper">
