--- a/www/templates/surveys-list.html
+++ b/www/templates/surveys-list.html
@@ -3,7 +3,10 @@
   <div class="buttons">
     <button class="button icon-left ion-ios-arrow-back button-clear " ng-click="goBack()">volver</button>
   </div>
-  <h1 class="title">Encuestas</h1>  
+  <h1 class="title">Encuestas</h1> 
+  <div class="buttons">
+    <button class="button button-clear " ng-click="gps()">gps</button>
+  </div> 
 </ion-header-bar>
   <ion-content >
   	<ion-list>
