--- a/www/templates/survey-question.html
+++ b/www/templates/survey-question.html
@@ -73,6 +73,13 @@
 						<input type="text">
 					</label>
 				</div>
+				<div ng-if="question.type == 'GPS'">      <!--GEOLOCATION -->					
+					  <center><div class="item item-icon ion-ios-plus bigger-2" ng-click="getPosition()"></div></center>
+					  <div ng-show="showGpsList" class="item item-text-wrap row" ng-repeat="(index,pos) in gps track by $index">
+					  	<div class="col">{{index}}</div>
+					    <div class="col col-75">{{gps[index]}}</div>
+					  </div>					  					  			
+				</div>
 		    </div>
 	  </div>                         
         </form>	   
