--- a/www/templates/survey-section.html
+++ b/www/templates/survey-section.html
@@ -1,14 +1,15 @@
 <ion-view view-title="surveys" ng-controller="stadisticsController">
-<ion-header-bar align-title="center" class="bar-positive">  
-  <h1 class="title">Descripción de la Sección</h1>  
+<ion-header-bar align-title="center" class="bar-positive">
+  <h1 class="title">Descripción de la Sección</h1>
 </ion-header-bar>
-  <ion-content > 
+  <ion-content >
     <div class="list card">
-      <div class="item item-icon-left">
+      <div class="item item-icon-left" >
       <i class="icon ion-ios-book-outline"></i>
         <h2>{{section.group_name}}</h2>
-      </div>    
+      </div>
       <div class="item item-body">
+        asdfsdf
         <p>{{section.description}}</p>
       </div>
      <a class="item item-icon-right positive" ng-click="nextQuestion()">
